samples/_failures_safe/1761604317_3cde31_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7f4ffde9.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_7f4ffde9.c:149:39: error: missing terminating " character
  149 |         case TOKEN_IDENTIFIER: return "IDENT
      |                                       ^~~~~~
./samples/SAFE/__tmp_7f4ffde9.c:149:9: error: expected expression at end of input
  149 |         case TOKEN_IDENTIFIER: return "IDENT
      |         ^~~~
./samples/SAFE/__tmp_7f4ffde9.c:149:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7f4ffde9.c:149:9: error: expected declaration or statement at end of input
